infrastructure/dev-server-for-petclinic-cf-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: >
  This cloudformation template prepares development environment for petclinic microservices app
  User needs to select appropiate key name when launching the template.

Parameter:
  KeyPairName:
    Description: Enter the name of your Key Pair for SSH connection
    Type: AWS::EC2::KeyPair::KeyName
    ConstrainDescription: Must be one of the existisng EC2 keypair
  
  Resources:
    PetclinicSG:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Enable HTTP and SSH for petclinic microservices
          SecurityGroupInggress:
            -IpProtokol: tcp
            FromPort: 22
            ToPort: 22
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 8888
            ToPort: 8888
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 8761
            ToPort: 8761
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 8081
            ToPort: 8081
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 8082
            ToPort: 8082
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 8083
            ToPort: 8083
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 8080
            ToPort: 8080
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 9411
            ToPort: 9411
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 9090
            ToPort: 9090
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 7979
            ToPort: 7979
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 3000
            ToPort: 3000
            CidrIp: 0.0.0.0/0
            -IpProtokol: tcp
            FromPort: 9091
            ToPort: 9091
            CidrIp: 0.0.0.0/0
  
  PetClinicLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: ami-0be2609ba883822ec 
        InstanceType: t2.medium
        KeyName: !Ref KeyPairName
        SecurityGroupIds:
          - !GetAtt PetclinicSG.GroupId
        UserData:
          Fn::Base64: | 
            #! /bin/bash
            yum update -y
            hostnamectl set-hostname petclinic-dev-server
            amazon-linux-extras install docker -y
            systemctl start docker
            systemctl enable docker
            usermod -a -G docker ec2-user
            curl -L "https://github.com/docker/compose/releases/download/1.26.2/docker-compose-$(uname -s)-$(uname -m)" \
            -o /usr/local/bin/docker-compose
            chmod +x /usr/local/bin/docker-compose
            yum install git -y
            yum install java-11-amazon-corretto -y
            git clone https://github.com/matmanpro/petclinic-microservices.git
            cd petclinic-microservices
            git fetch
            git checkout dev
  PetClinicServer:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref PetClinicLT
        Version: !GetAtt PetClinicLT.LatestVersionNumber
      Tags:
        - Key: Name
          Value: !Sub Petclinic App Dev Server ${AWS::StackName}

Output:
  PetClinicDNSName: 
    Description: Petclinic App Url
    Value: !GetAtt PetClinicServer.PublicDnsName
